<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_logIn"
            android:layout_width="@dimen/_260sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/get_start_button"
            android:fontFamily="@font/roboto"
            android:padding="@dimen/_7sdp"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewPager" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_createAccount"
            android:layout_width="@dimen/_260sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/get_start_button"
            android:fontFamily="@font/roboto"
            android:padding="@dimen/_7sdp"
            android:text="@string/create_account"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_logIn" />


        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_370sdp"
            android:contentDescription="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>