<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/splash4"
            tools:layout_editor_absoluteX="-94dp"
            tools:layout_editor_absoluteY="0dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto_slab_bold"
            android:text="@string/logo_title"
            android:textColor="@color/logo_name"
            android:textSize="@dimen/_30sdp"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/logo_description"
            android:textColor="@color/logo_description"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_get_start"
            android:layout_width="@dimen/_260sdp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_28sdp"
            android:background="@drawable/get_start_button"
            android:fontFamily="@font/roboto"
            android:padding="@dimen/_7sdp"
            android:text="@string/splash_button"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_32sdp"
            android:fontFamily="@font/roboto"
            android:text="@string/splash_sign_in_txt"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="@+id/btn_get_start"
            app:layout_constraintStart_toStartOf="@+id/btn_get_start" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>