<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="hotelList"
            type="com.example.roome.hotel.viewmodel.HotelViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F6F6F6">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:fontFamily="@font/roboto_slab_bold"
            android:text="@string/explore"
            android:textColor="#252529"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_back"
            app:layout_constraintEnd_toStartOf="@+id/iv_like"
            app:layout_constraintStart_toEndOf="@+id/iv_back"
            app:layout_constraintTop_toTopOf="@+id/iv_back" />

        <ImageView
            android:id="@+id/iv_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_like"
            app:layout_constraintBottom_toBottomOf="@+id/textView8"
            app:layout_constraintEnd_toStartOf="@+id/iv_map"
            app:layout_constraintTop_toTopOf="@+id/textView8" />

        <ImageView
            android:id="@+id/iv_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:src="@drawable/ic_map"
            app:layout_constraintBottom_toBottomOf="@+id/iv_like"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_like" />

        <View
            android:id="@+id/divider7"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />


        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F6F6F6"
            app:layout_constraintTop_toBottomOf="@+id/divider7">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.SearchView
                        android:id="@+id/ti_search"
                        android:layout_width="@dimen/_240sdp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/search_view_background"
                        android:elevation="@dimen/_3sdp"
                        android:inputType="text"
                        app:defaultQueryHint="London"
                        app:iconifiedByDefault="false"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:queryBackground="@android:color/transparent"
                        app:searchIcon="@null" />

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/appCompatImageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/ic_btn_search"
                        app:layout_constraintBottom_toBottomOf="@+id/ti_search"
                        app:layout_constraintStart_toEndOf="@+id/ti_search"
                        app:layout_constraintTop_toTopOf="@+id/ti_search" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_18sdp"
                        android:text="@string/choose_date"
                        app:layout_constraintStart_toStartOf="@+id/ti_search"
                        app:layout_constraintTop_toBottomOf="@+id/ti_search" />

                    <TextView
                        android:id="@+id/tv_start_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:text="@string/start_Date"
                        android:textColor="#252529"
                        app:layout_constraintStart_toStartOf="@+id/textView4"
                        app:layout_constraintTop_toBottomOf="@+id/textView4" />

                    <TextView
                        android:id="@+id/tv_date_dash"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="-"
                        android:textColor="#252529"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_start_date"
                        app:layout_constraintStart_toEndOf="@+id/tv_start_date"
                        app:layout_constraintTop_toTopOf="@+id/tv_start_date" />

                    <TextView
                        android:id="@+id/tv_end_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/end_Date"
                        android:textColor="#252529"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_date_dash"
                        app:layout_constraintStart_toEndOf="@+id/tv_date_dash"
                        app:layout_constraintTop_toTopOf="@+id/tv_date_dash" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="@dimen/_18sdp"
                        android:text="@string/number_of_rooms"
                        app:layout_constraintStart_toEndOf="@+id/imageView4"
                        app:layout_constraintTop_toBottomOf="@+id/ti_search" />

                    <TextView
                        android:id="@+id/tv_room"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:text="@string/room"
                        android:textColor="#252529"
                        app:layout_constraintStart_toStartOf="@+id/textView6"
                        app:layout_constraintTop_toBottomOf="@+id/textView6" />

                    <TextView
                        android:id="@+id/tv_adult_dash"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="-"
                        android:textColor="#252529"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_room"
                        app:layout_constraintStart_toEndOf="@+id/tv_room"
                        app:layout_constraintTop_toTopOf="@+id/tv_room" />

                    <TextView
                        android:id="@+id/tv_adult"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/adult"
                        android:textColor="#252529"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_room"
                        app:layout_constraintStart_toEndOf="@+id/tv_adult_dash"
                        app:layout_constraintTop_toTopOf="@+id/tv_adult_dash" />

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_18sdp"
                        android:src="@drawable/ic_seperator"
                        app:layout_constraintEnd_toEndOf="@+id/ti_search"
                        app:layout_constraintStart_toStartOf="@+id/ti_search"
                        app:layout_constraintTop_toBottomOf="@+id/ti_search" />

                    <TextView
                        android:id="@+id/tv_search_result"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:fontFamily="@font/roboto"
                        android:text="530 hotels found"
                        android:textColor="#252529"
                        android:textSize="@dimen/_13sdp"
                        app:layout_constraintStart_toStartOf="@+id/tv_start_date"
                        app:layout_constraintTop_toBottomOf="@+id/tv_start_date" />

                    <TextView
                        android:id="@+id/tv_filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="@font/roboto"
                        android:text="Filters"
                        android:textColor="#252529"
                        android:textSize="@dimen/_14sdp"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView10"
                        app:layout_constraintEnd_toStartOf="@+id/imageView10"
                        app:layout_constraintTop_toTopOf="@+id/imageView10" />

                    <ImageView
                        android:id="@+id/imageView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:src="@drawable/ic_filter"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_search_result"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/tv_search_result" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_search_by_result"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_500sdp"
                        android:layout_marginTop="16dp"
                        android:background="#ffffff"
                        android:orientation="vertical"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_search_result"
                        tools:itemCount="3"
                        tools:listitem="@layout/recycler_item_search_by_result" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_60sdp"
                        tools:layout_editor_absoluteX="245dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/rv_search_by_result"
                        tools:layout_editor_absoluteY="584dp" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>